--- a/textBoxes.css
+++ b/textBoxes.css
@@ -144,7 +144,7 @@ a:hover {
     position: relative;
     margin-bottom: 2em;
     /* liner gradient tints the image darker for readability*/
-    background-image: linear-gradient( rgba(0,0,0,.2), rgba(0,0,0,.2) ), url(https://images.fineartamerica.com/images/artworkimages/mediumlarge/1/world-map-watercolors-michael-tompsett.jpg); 
+    background-image: linear-gradient( rgba(0,0,0,.2), rgba(0,0,0,.2) ), url(https://www.kolpaper.com/wp-content/uploads/2020/04/Moon-and-Earth-Hd-Wallpaper.jpg); 
     height: 400px;
     background-size: cover;
     background-color: #141c25f2;
@@ -157,6 +157,16 @@ a:hover {
 .top-text {
   position: relative;
   font-size: 34px;
+  padding-bottom: 0.5em
+  text-transform: uppercase;
+  text-align: center;
+  display: block; /* Change to `display: none` for no top text */
+  color: #ffffff72;
+}
+
+.top-text2 {
+  position: relative;
+  font-size: 70px;
   padding-bottom: 0.5em
   text-transform: uppercase;
   text-align: center;
@@ -178,6 +188,21 @@ a:hover {
   margin-bottom: 2.5rem;
   font-weight: bold;
 }
+
+.bottom-text2 {
+  position: relative;
+  letter-spacing: 0.065em;
+  line-height: 1em;
+  font-size: 50px;
+  text-transform: uppercase;
+  text-align: center;
+  display: block; /* Change to `display: none` for no bottom text */
+  color: #ffffff;
+  margin-bottom: 2.5rem;
+  font-weight: bold;
+}
+
+
 
 /* making tables look nicer */
 tr:nth-child(even) {background-color: #f2f2f2;}
